# hexpat-pickle-generic

./: .ghci  LICENSE  Makefile  README.md  generic-xmlpickler.cabal  hexpat-generic.cabal  hexpat-pickle-generic.cabal
src/Text/XML/Expat/: Generic.hs
src/Text/XML/Expat/Pickle/: Generic.hs
src/Text/XML/HXT/Arrow/Pickle/: Generic.hs
test/: Main.hs
