name:                  generic-xmlpickler
version:               0.1.0
synopsis:              Generation of HXT XmlPickler instances using GHC.Generics
license:               BSD3
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              AWS, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    Generation of HXT XmlPickler instances using GHC.Generics

source-repository head
    type:     git
    location: git://github.com/brendanhay/aws-haskell.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    exposed-modules:
        Text.XML.HXT.Arrow.Pickle.Generic

    ghc-options:
        -Wall
        -O2

    build-depends:
        base > 4   && < 5
      , hxt  > 9.1 && < 9.4
