name:                  hexpat-generic
version:               0.1.0
synopsis:              Generate GHC.Generic instances for pickleable data types
license:               BSD3
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              Data, XML
build-type:            Simple
cabal-version:         >= 1.10

description:
    Generate GHC.Generic instances for pickleable data types

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/hexpat-generic.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    exposed-modules:
        Text.XML.Expat.Generic

    ghc-options:
        -Wall
        -O2

    build-depends:
        base > 4      && < 5
      , bytestring
      , hexpat-pickle
